--- a/src/config/config.json
+++ b/src/config/config.json
@@ -5,8 +5,15 @@
 	"sim_time":50,
 	"mean_tx_generation":3,
 	"sd_tx_generation":0.1,
-	"avg_tx_gas":21000,
+	"mean_tx_gas":21000,
 	"sd_tx_gas":3000,
+	"mean_tx_size":208,
+	"sd_tx_size":2,
+	"load_csv":1,
+	"block_gas_limit":4700000,
+	"mining_time_avg":5,
+	"mining_time_sd":4,
+	"block_verify_time":2,
 	"POW":{
 		"miner_number":1
 	}
